--- a/trex/prepare_dataset.ipynb
+++ b/trex/prepare_dataset.ipynb
@@ -81,18 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp = {}\n",
-    "\n",
-    "for value in [1, 2, 3, 38]:\n",
-    "    temp.update({value: 'Opa'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import glob\n",
     "import json\n",
     "from tqdm import tqdm_notebook as tqdm\n",
@@ -104,7 +92,7 @@
     "            result.append(triple)\n",
     "    return result\n",
     "\n",
-    "for dataset_file in glob.glob(os.path.join(trex_path, '*.json')):\n",
+    "for dataset_file in glob.glob(os.path.join(trex_path, '*.json'))[176:]:\n",
     "    dataset = pd.read_json(dataset_file)\n",
     "    dataset = dataset[dataset['triples'].map(len) > 0]\n",
     "    dataset['triples'] = dataset['triples'].map(filter_triples)\n",
@@ -117,7 +105,7 @@
     "            docid: nlp.annotate(dataset.iloc[document].text, properties=nlp_properties)['sentences']\n",
     "        })\n",
     "        \n",
-    "    json.dump(nlp_annot, dataset_file.replace(trex_path, annot_path))"
+    "    json.dump(nlp_annot, open(dataset_file.replace(trex_path, annot_path), 'w'))"
    ]
   },
   {
@@ -146,10 +134,16 @@
     "\n",
     "def extract_tokens(annotation, arg1, arg2):\n",
     "    def find_in_sentence(sentence_annotation, argument_annotation):\n",
+    "        start_token = 0        \n",
     "        for token in sentence_annotation['tokens']:\n",
-    "            if token.get('characterOffsetBegin') == argument_annotation.get('boundaries')[0] \\\n",
-    "                and token.get('characterOffsetEnd') == argument_annotation.get('boundaries')[1]:\n",
-    "                return token['index']  # begin with 1!\n",
+    "            if token.get('characterOffsetBegin') == argument_annotation.get('boundaries')[0]:\n",
+    "                start_token = token['index']\n",
+    "            if token.get('characterOffsetEnd') == argument_annotation.get('boundaries')[1]:\n",
+    "                if start_token == token['index']:\n",
+    "                    # entity contains one token\n",
+    "                    return [token['index']]  # begin with 1!\n",
+    "                if start_token:\n",
+    "                    return [ind for ind in range(start_token, token['index'] + 1)]\n",
     "    \n",
     "    for i, sentence in enumerate(annotation):\n",
     "        tok1 = find_in_sentence(sentence, arg1)\n",
@@ -157,13 +151,13 @@
     "            tok2 = find_in_sentence(sentence, arg2)\n",
     "            if tok2:\n",
     "                return [i, tok1, tok2]\n",
-    "        else:\n",
-    "            return [-1, -1, -1]\n",
+    "    return [-1, -1, -1]\n",
     "\n",
     "def _get_bow_between(tokens, tok1, tok2):\n",
     "    tmp = []\n",
     "    result = []\n",
-    "    for word in [tokens[i]['originalText'] for i in range(tok1, tok2-1)]:\n",
+    "    tok_left, tok_right = sorted([tok1, tok2])\n",
+    "    for word in [tokens[i-1]['originalText'] for i in range(max(tok_left) + 1, min(tok_right))]:\n",
     "        for pun in string.punctuation:\n",
     "            word = word.strip(pun)\n",
     "        if word != '':\n",
@@ -176,7 +170,8 @@
     "\n",
     "def _get_pos_between(tokens, tok1, tok2):\n",
     "    result = []\n",
-    "    for pos in [tokens[i]['pos'] for i in range(tok1, tok2-1)]:\n",
+    "    tok_left, tok_right = sorted([tok1, tok2])\n",
+    "    for pos in [tokens[i-1]['pos'] for i in range(max(tok_left) + 1, min(tok_right))]:\n",
     "        if pos not in string.punctuation:\n",
     "            result.append(pos)\n",
     "    return '_'.join(result)\n",
@@ -203,6 +198,18 @@
     "    path = nx.shortest_path(graph, source=start, target=end)\n",
     "    return [p for p in path]\n",
     "\n",
+    "def _get_shortest_path(dependencies, left_set, right_set):\n",
+    "    \"\"\"\n",
+    "    Finds the shortest dependency path between two sets of tokens in a sentence.\n",
+    "    \"\"\"\n",
+    "    result = [1] * len(dependencies)\n",
+    "    for a in left_set:\n",
+    "        for b in right_set:\n",
+    "            candidate = _get_dep_path(dependencies, a, b)\n",
+    "            if len(candidate) < len(result):\n",
+    "                result = candidate\n",
+    "    return result    \n",
+    "\n",
     "def _get_words_dep(tokens, dependency_path):\n",
     "    result = [tokens[i-1]['word'] for i in dependency_path[1:-1]]\n",
     "    return ' '.join(result)\n",
@@ -214,12 +221,18 @@
     "            result.append(word)\n",
     "    return '|'.join(result)\n",
     "\n",
-    "def _get_entity_type(token):\n",
-    "    return token.get('ner')\n",
+    "def _get_entity_type(tokens, tok):\n",
+    "    _replace = {\n",
+    "        'PERSON_PERSON': 'PERSON',\n",
+    "        'ORGANIZATION_ORGANIZATION': 'ORGANIZATION'\n",
+    "    }\n",
+    "    result = '_'.join([tokens[token-1].get('ner') for token in tok])\n",
+    "    for key, value in _replace.items():\n",
+    "        result = result.replace(key, value)\n",
+    "    return result\n",
     "\n",
-    "def process_document(document):\n",
+    "def process_document(document, annotation):\n",
     "    docid = document['docid'].split('/')[-1]\n",
-    "    annotation = json.load(open(os.path.join('corenlp_annotations', docid + '.json'), 'r'))['sentences']\n",
     "    result = []\n",
     "    \n",
     "    for triple in document['triples']:\n",
@@ -232,11 +245,11 @@
     "                surface2 = '_'.join(triple['subject']['surfaceform'].split())\n",
     "                surface_pred = '_'.join(triple['predicate']['surfaceform'].split())\n",
     "                bow = _get_bow_between(annotation[act_sent]['tokens'], tok1, tok2)\n",
-    "                dependency_path = _get_dep_path(annotation[act_sent]['enhancedPlusPlusDependencies'], tok1, tok2)\n",
+    "                dependency_path = _get_shortest_path(annotation[act_sent]['enhancedPlusPlusDependencies'], tok1, tok2)\n",
     "                trigger = _get_trigger(annotation[act_sent]['tokens'], dependency_path)\n",
     "                pos = _get_pos_between(annotation[act_sent]['tokens'], tok1, tok2)\n",
-    "                ent1 = _get_entity_type(annotation[act_sent]['tokens'][tok1-1])\n",
-    "                ent2 = _get_entity_type(annotation[act_sent]['tokens'][tok2-1])\n",
+    "                ent1 = _get_entity_type(annotation[act_sent]['tokens'], tok1)\n",
+    "                ent2 = _get_entity_type(annotation[act_sent]['tokens'], tok2)\n",
     "                path = _get_words_dep(annotation[act_sent]['tokens'], dependency_path)\n",
     "                \n",
     "                result.append({\n",
@@ -270,10 +283,10 @@
     "def extract_triples(data_chunk, annot_chunk):\n",
     "    result = []\n",
     "\n",
-    "    for document in range(data_chunk.shape[0]):\n",
-    "        annotation = annot.get([dataset.iloc[document]['docid']])\n",
+    "    for index, row in data_chunk.iterrows():\n",
+    "        annotation = annot_chunk.get(row['docid'].split('/')[-1])\n",
     "        if annotation:\n",
-    "            result += process_document(dataset.iloc[document], annotation)\n",
+    "            result += process_document(row, annotation)\n",
     "        \n",
     "    return pd.DataFrame(result)"
    ]
@@ -284,12 +297,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len(glob.glob(os.path.join(trex_path, '*.json')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(glob.glob(os.path.join(annot_path, '*.json')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "data_path = 'final_data'\n",
+    "! mkdir $data_path\n",
     "\n",
-    "for dataset_file in tqdm(glob.glob(os.path.join(trex_path, '*.json'))):\n",
+    "for dataset_file in tqdm(glob.glob(os.path.join(trex_path, '*.json'))[65:]):\n",
     "    data_chunk = pd.read_json(dataset_file)\n",
-    "    annot_chunk = dataset_file.replace(trex_path, annot_path)\n",
+    "    annot_chunk = json.load(open(dataset_file.replace(trex_path, annot_path), 'r'))\n",
     "    features = extract_triples(data_chunk, annot_chunk)\n",
+    "    features = features[features['_sentence'] > -1]  # filter entities not given in the same sentence\n",
     "    features.to_pickle(dataset_file.replace(trex_path, data_path))"
    ]
   }
