relation autoencoder on trex

--- a/trex/prepare_dataset.ipynb
+++ b/trex/prepare_dataset.ipynb
@@ -92,7 +92,7 @@
     "            result.append(triple)\n",
     "    return result\n",
     "\n",
-    "for dataset_file in glob.glob(os.path.join(trex_path, '*.json'))[176:]:\n",
+    "for dataset_file in glob.glob(os.path.join(trex_path, '*.json'))[418:]:\n",
     "    dataset = pd.read_json(dataset_file)\n",
     "    dataset = dataset[dataset['triples'].map(len) > 0]\n",
     "    dataset['triples'] = dataset['triples'].map(filter_triples)\n",
@@ -233,10 +233,13 @@
     "\n",
     "def process_document(document, annotation):\n",
     "    docid = document['docid'].split('/')[-1]\n",
+    "    #annotation = json.load(open(os.path.join('corenlp_annotations', docid + '.json'), 'r'))['sentences']\n",
     "    result = []\n",
     "    \n",
     "    for triple in document['triples']:\n",
     "        if triple['object']['surfaceform'] and triple['subject']['surfaceform'] and triple['predicate']['surfaceform']:\n",
+    "            #  print('>>>', triple)\n",
+    "            #  print('<<<', annotation[0])\n",
     "            act_sent, tok1, tok2 = extract_tokens(annotation, \n",
     "                                                  triple['object'],\n",
     "                                                  triple['subject'])\n",
@@ -294,24 +297,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(glob.glob(os.path.join(trex_path, '*.json')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(glob.glob(os.path.join(annot_path, '*.json')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -320,12 +305,48 @@
     "data_path = 'final_data'\n",
     "! mkdir $data_path\n",
     "\n",
-    "for dataset_file in tqdm(glob.glob(os.path.join(trex_path, '*.json'))[65:]):\n",
+    "for dataset_file in tqdm(glob.glob(os.path.join(trex_path, '*.json'))[219:]):\n",
     "    data_chunk = pd.read_json(dataset_file)\n",
     "    annot_chunk = json.load(open(dataset_file.replace(trex_path, annot_path), 'r'))\n",
     "    features = extract_triples(data_chunk, annot_chunk)\n",
     "    features = features[features['_sentence'] > -1]  # filter entities not given in the same sentence\n",
     "    features.to_pickle(dataset_file.replace(trex_path, data_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_yao_like(path, of):\n",
+    "    result = []\n",
+    "    all_files = glob.glob(path + '*.json')\n",
+    "    _train = int(len(all_files) * 0.6)\n",
+    "    _dev = (len(all_files) - _train) // 2\n",
+    "    \n",
+    "    for file in all_files:\n",
+    "        df = pd.read_pickle(file)\n",
+    "        df.replace('PERSON_PERSON', 'PERSON', inplace=True)\n",
+    "        df.replace('ORGANIZATION_ORGANIZATION_ORGANIZATION', 'ORGANIZATION', inplace=True)\n",
+    "        df.replace('ORGANIZATION_ORGANIZATION', 'ORGANIZATION', inplace=True)\n",
+    "        result.append(df[[key for key in df.keys() if key[0] != '_']])\n",
+    "\n",
+    "    train = pd.concat(result[:_train])\n",
+    "    train.to_csv(of+'_train.csv', sep='\\t', index=None, header=False)\n",
+    "    dev = pd.concat(result[_train:_train+_dev])\n",
+    "    dev.to_csv(of+'_dev.csv', sep='\\t', index=None, header=False)\n",
+    "    test = pd.concat(result[_train+_dev:])\n",
+    "    test.to_csv(of+'_test.csv', sep='\\t', index=None, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convert_yao_like('final_data/', 'trex')"
    ]
   }
  ],
